--- a/index.html
+++ b/index.html
@@ -1763,18 +1763,30 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('service-worker.js')
-                    .then((registration) => {
-                        console.log('ServiceWorker registrado con éxito:', registration);
-                    })
-                    .catch((error) => {
-                        console.error('Error al registrar el ServiceWorker:', error);
-                    });
-            });
-        }
-    </script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(function(registration) {
+        console.log('Service Worker registrado con alcance:', registration.scope);
+
+        registration.onupdatefound = function() {
+          const installingWorker = registration.installing;
+          installingWorker.onstatechange = function() {
+            if (installingWorker.state === 'installed') {
+              if (navigator.serviceWorker.controller) {
+                // Nueva versión de la PWA disponible, recargar la página o mostrar notificación
+                console.log('Nueva versión disponible. Recarga la página.');
+                window.location.reload();
+              }
+            }
+          };
+        };
+      })
+      .catch(function(error) {
+        console.error('Registro de Service Worker fallido:', error);
+      });
+  }
+</script>
+
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
