--- a/index.html
+++ b/index.html
@@ -185,11 +185,12 @@
 
         .table-container {
             overflow-x: auto;
-            /* Permite desplazar la tabla horizontalmente en todas las pantallas */
+            /* Permitir desplazamiento horizontal */
+            -webkit-overflow-scrolling: touch;
+            /* Permitir desplazamiento suave en dispositivos táctiles */
             width: 100%;
-            /* Asegura que la tabla ocupe todo el ancho del contenedor */
             position: relative;
-            /* Necesario para el posicionamiento sticky */
+            /* Necesario para el comportamiento sticky */
         }
 
         .table-container table {
@@ -199,28 +200,28 @@
             table-layout: fixed;
         }
 
-        /* Estilos para las filas y celdas de la tabla */
+        /* Estilo para las celdas del resto de la tabla */
         .table-container th,
         .table-container td {
-            border: 1px solid #6564647b;
             text-align: center;
             padding: 8px;
             font-size: 12px;
-            /* Aumentado el tamaño de fuente para mejorar legibilidad en dispositivos móviles */
+            border: 1px solid #6564647b;
+            min-width: 100px;
+            /* Asegura que las celdas tengan un ancho mínimo */
         }
 
-        /* Aplicar la clase sticky-column a la primera columna */
         .sticky-column {
             position: sticky;
-            /* Hace la columna "pegajosa" */
+            /* Hace que la columna sea sticky */
             left: 0;
-            /* La mantiene pegada a la izquierda */
+            /* La fija al lado izquierdo */
             background-color: white;
-            /* Fondo blanco para evitar superposición de contenido */
-            z-index: 100;
-            /* Asegura que la columna sticky esté por encima de otras celdas */
-            border-right: 1px solid black;
-            /* Añade un borde a la derecha para diferenciar la columna */
+            /* Fondo blanco para que no se superponga con otras celdas */
+            z-index: 10;
+            /* Asegura que esté por encima de otras celdas */
+            border-right: 1px solid #6564647b;
+            /* Añade un borde a la derecha */
         }
 
         .signature-container {
@@ -323,6 +324,9 @@
 
             .table-container {
                 overflow-x: auto;
+                /* Permitir desplazamiento horizontal en tablets */
+                -webkit-overflow-scrolling: touch;
+                /* Permitir desplazamiento suave */
             }
 
             table {
