--- a/index.html
+++ b/index.html
@@ -520,9 +520,11 @@
                 </tr>
             </thead>
 
-            <tbody id="checklist-body">
-                <!-- Las filas serán generadas dinámicamente con JavaScript -->
-            </tbody>
+            <div class="table-container">
+                <tbody id="checklist-body">
+                    <!-- Las filas serán generadas dinámicamente con JavaScript -->
+                </tbody>
+            </div>
 
             <tr>
                 <th colspan="118" class="header right"
@@ -1021,10 +1023,11 @@
                 </tr>
             </thead>
 
-            <tbody id="checklist-body-Compressor">
-                <!-- Las filas serán generadas dinámicamente con JavaScript -->
-            </tbody>
-
+            <div class="table-container">
+                <tbody id="checklist-body-Compressor">
+                    <!-- Las filas serán generadas dinámicamente con JavaScript -->
+                </tbody>
+            </div>
 
             <tr>
                 <th colspan="118" class="header right"
@@ -1314,11 +1317,11 @@
                     </script>
                 </tr>
             </thead>
-
-            <tbody id="checklist-body-Sonda520">
-                <!-- Las filas serán generadas dinámicamente con JavaScript -->
-            </tbody>
-
+            <div class="table-container">
+                <tbody id="checklist-body-Sonda520">
+                    <!-- Las filas serán generadas dinámicamente con JavaScript -->
+                </tbody>
+            </div>
             <tr>
                 <th colspan="118" class="header right"
                     style="color: red; background-color: grey; border-top: 1px solid black; border-bottom: 1px solid black;">
@@ -1605,11 +1608,11 @@
                     </script>
                 </tr>
             </thead>
-
-            <tbody id="checklist-body-SondaRotativa">
-                <!-- Las filas serán generadas dinámicamente con JavaScript -->
-            </tbody>
-
+            <div class="table-container">
+                <tbody id="checklist-body-SondaRotativa">
+                    <!-- Las filas serán generadas dinámicamente con JavaScript -->
+                </tbody>
+            </div>
 
             <tr>
                 <th colspan="118" class="header right"
