--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                     style="background: white; padding: 20px; border-radius: 10px; display: flex; flex-direction: column; align-items: center;">
                     <canvas id="signatureCanvasCAMINHÃO-SONDA" width="400" height="200"
                         style="border: 1px solid black;"></canvas>
-                    <button onclick="clearSignatureCAMINHÃO-SONDA()">Limpo</button>
-                    <button onclick="saveSignatureCAMINHÃO-SONDA()">Salvar assinatura</button>
+                    <button onclick="clearSignatureCAMINHÃOSONDA()">Limpo</button>
+                    <button onclick="saveSignatureCAMINHÃOSONDA()">Salvar assinatura</button>
                 </div>
             </div>
 
@@ -220,13 +220,13 @@
                         <td colspan="13" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="55" style="height: 21px;">
+                        <td colspan="65" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                         <td colspan="30" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="20" style="height: 21px;">
+                        <td colspan="10" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                     </tr>
@@ -236,13 +236,13 @@
                         <td colspan="13" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="55" style="height: 21px;">
+                        <td colspan="65" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                         <td colspan="30" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="20" style="height: 21px;">
+                        <td colspan="10" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                     </tr>
@@ -250,13 +250,13 @@
                         <td colspan="13" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="55" style="height: 21px;">
+                        <td colspan="65" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                         <td colspan="30" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="20" style="height: 21px;">
+                        <td colspan="10" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                     </tr>
@@ -752,13 +752,29 @@
                         <td colspan="13" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="55" style="height: 21px;">
+                        <td colspan="65" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                         <td colspan="30" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="20" style="height: 21px;">
+                        <td colspan="10" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                    </tr>
+
+
+                    <tr>
+                        <td colspan="13" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                        <td colspan="65" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                        <td colspan="30" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                        <td colspan="10" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                     </tr>
@@ -766,27 +782,13 @@
                         <td colspan="13" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="55" style="height: 21px;">
+                        <td colspan="65" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                         <td colspan="30" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="20" style="height: 21px;">
-                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="13" style="height: 21px;">
-                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
-                        </td>
-                        <td colspan="55" style="height: 21px;">
-                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
-                        </td>
-                        <td colspan="30" style="height: 21px;">
-                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
-                        </td>
-                        <td colspan="20" style="height: 21px;">
+                        <td colspan="10" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                     </tr>
@@ -1062,36 +1064,43 @@
                         <td colspan="13" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="55" style="height: 21px;">
+                        <td colspan="65" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                         <td colspan="30" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="20" style="height: 21px;">
+                        <td colspan="10" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                     </tr>
+
+
                     <tr>
-                    </tr>
-
-                    <td colspan="13" style="height: 21px;"></td>
-                    <td colspan="55" style="height: 21px;"></td>
-                    <td colspan="30" style="height: 21px;"></td>
-                    <td colspan="20" style="height: 21px;"></td>
-
+                        <td colspan="13" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                        <td colspan="65" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                        <td colspan="30" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                        <td colspan="10" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
                     </tr>
                     <tr>
                         <td colspan="13" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="55" style="height: 21px;">
+                        <td colspan="65" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                         <td colspan="30" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="20" style="height: 21px;">
+                        <td colspan="10" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                     </tr>
@@ -1369,36 +1378,43 @@
                         <td colspan="13" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="55" style="height: 21px;">
+                        <td colspan="65" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                         <td colspan="30" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="20" style="height: 21px;">
+                        <td colspan="10" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                     </tr>
+
+
                     <tr>
-                    </tr>
-
-                    <td colspan="13" style="height: 21px;"></td>
-                    <td colspan="55" style="height: 21px;"></td>
-                    <td colspan="30" style="height: 21px;"></td>
-                    <td colspan="20" style="height: 21px;"></td>
-
+                        <td colspan="13" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                        <td colspan="65" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                        <td colspan="30" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
+                        <td colspan="10" style="height: 21px;">
+                            <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
+                        </td>
                     </tr>
                     <tr>
                         <td colspan="13" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="55" style="height: 21px;">
+                        <td colspan="65" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                         <td colspan="30" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
-                        <td colspan="20" style="height: 21px;">
+                        <td colspan="10" style="height: 21px;">
                             <input type="text" style="width: 100%; height: 100%; box-sizing: border-box;" />
                         </td>
                     </tr>
@@ -1698,7 +1714,7 @@
                 const cell = document.createElement('td');
                 cell.className = 'day-column';
                 cell.innerHTML = `
-        <input type="text" id="horimetrosInput${i + 1}-${formId}" style="transform: rotate(-90deg); transform-origin: left bottom; text-align: center; height: 100px; width: 30px;">
+        <input type="text" id="horimetrosInput${i + 1}-${formId}" style="transform: rotate(-90deg); transform-origin: left bottom; text-align: center; height: 80px; width: 15px;">
     `;
                 row.appendChild(cell);
             }
