--- a/index.html
+++ b/index.html
@@ -1786,7 +1786,7 @@
                 cell.className = 'day-column';
                 cell.innerHTML = `
             <div style="display: flex; align-items: flex-end; justify-content: center; height: 100%; padding-bottom: 10px;">
-                <input type="text" id="horimetrosInput${i + 1}-${formId}" style="writing-mode: vertical-rl; text-align: right; transform: translateY(20px); padding-bottom: 10px;">
+                <input type="text" id="horimetrosInput${i + 1}-${formId}" style="width: 20px; height: 80px; writing-mode: vertical-rl; text-align: center; transform: translateY(40px); padding-bottom: 10px;">
             </div>
         `;
                 row.appendChild(cell);
